--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "expo-sqlite": "^13.2.2",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.4",
+    "react-native-simple-toast": "^3.3.0",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
